--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 										<div class="row">
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-														<i class="devicon-javascript-plain colored"></i>
+														<i class="devicon-javascript-plain colored" id="devicon"></i>
 
 													<header>
 														<h3>JavaScript</h3>
@@ -145,7 +145,7 @@
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<i class="devicon-react-original colored"></i>
+													<i class="devicon-react-original colored" id="devicon"></i>
 													<header>	
 														<h3>React</h3>
 													</header>
@@ -154,7 +154,7 @@
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img src="images/redux.png" alt="" width="50px" />
+													<img src="images/redux.png" alt="" width="64px" />
 													<header>
 														<h3>Redux</h3>
 													</header>
@@ -163,7 +163,7 @@
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<i class="devicon-ruby-plain colored"></i>
+													<i class="devicon-ruby-plain colored" id="devicon"></i>
 													<header>
 														<h3>Ruby</h3>
 													</header>
@@ -172,7 +172,7 @@
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<i class="devicon-rails-plain-wordmark colored"></i>
+													<i class="devicon-rails-plain-wordmark colored" id="devicon"></i>
 													<header>
 														<h3>Rails</h3>
 													</header>
@@ -181,7 +181,7 @@
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<i class="devicon-postgresql-plain colored"></i>
+													<i class="devicon-postgresql-plain colored" id="devicon"></i>
 													<header>
 														<h3>PostgreSQL</h3>
 													</header>
@@ -190,7 +190,7 @@
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-														<i class="devicon-css3-plain colored"></i>
+														<i class="devicon-css3-plain colored" id="devicon"></i>
 													<header>
 														<h3>CSS</h3>
 													</header>
@@ -199,7 +199,7 @@
 											</div>
 												<div class="col-4 col-6-medium col-12-small">
 													<section class="box">
-															<i class="devicon-html5-plain colored"></i>
+															<i class="devicon-html5-plain colored" id="devicon"></i>
 														<header>
 															<h3>HTML5</h3>
 														</header>
@@ -208,7 +208,7 @@
 												</div>
 												<div class="col-4 col-6-medium col-12-small">
 													<section class="box">
-															<i class="devicon-d3js-plain colored"></i>
+															<i class="devicon-d3js-plain colored" id="devicon"></i>
 														<header>
 															<h3>D3</h3>
 														</header>
@@ -217,7 +217,7 @@
 												</div>
 												<div class="col-4 col-6-medium col-12-small">
 													<section class="box">
-															<i class="devicon-git-plain colored"></i>
+															<i class="devicon-git-plain colored" id="devicon"></i>
 														<header>
 															<h3>Git</h3>
 														</header>
@@ -226,7 +226,7 @@
 												</div>
 												<div class="col-4 col-6-medium col-12-small">
 													<section class="box">
-															<i class="devicon-webpack-plain colored"></i>
+															<i class="devicon-webpack-plain colored" id="devicon"></i>
 														<header>
 															<h3>Webpack</h3>
 														</header>
@@ -235,7 +235,7 @@
 												</div>
 												<div class="col-4 col-6-medium col-12-small">
 													<section class="box">
-															<i class="devicon-jquery-plain colored"></i>
+															<i class="devicon-jquery-plain colored" id="devicon"></i>
 														<header>
 															<h3>JQuery</h3>
 														</header>
@@ -244,7 +244,7 @@
 												</div>
 												<div class="col-4 col-6-medium col-12-small">
 													<section class="box">
-															<i class="devicon-heroku-plain colored"></i>
+															<i class="devicon-heroku-plain colored" id="devicon"></i>
 														<header>
 															<h3>Heroku</h3>
 														</header>
@@ -253,7 +253,7 @@
 												</div>
 												<div class="col-4 col-6-medium col-12-small">
 													<section class="box">
-														<i class="devicon-amazonwebservices-original colored"></i>
+														<i class="devicon-amazonwebservices-original colored" id="devicon"></i>
 														<header>
 															<h3>AWS</h3>
 														</header>
@@ -262,7 +262,7 @@
 												</div>
 												<div class="col-4 col-6-medium col-12-small">
 													<section class="box">
-															<i class="devicon-mongodb-plain colored"></i>
+															<i class="devicon-mongodb-plain colored" id="devicon"></i>
 														<header>
 															<h3>MongoDB</h3>
 														</header>
@@ -280,7 +280,7 @@
 								<!-- Blog -->
 									<section>
 										<header class="major">
-											<h2>The Blog</h2>
+											<h2>About Me</h2>
 										</header>
 										<div class="row">
 											<div class="col-6 col-12-small">
