--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 						</nav>
 
 					<!-- Banner -->
+					<div class="picture"></div>
 						<section id="banner">
 							<header>
 								<h2>Hey, I'm</h2>
@@ -88,10 +89,10 @@
 									<section class="first">
 										<a href="http://couch9.herokuapp.com/" target="_blank">
 											<img src="images/logo.png" alt="">
+											<header>
+												<h2>Couch9</h2>
+											</header>
 										</a>
-										<header>
-											<h2>Couch9</h2>
-										</header>
 										<p>A near pixel-perfect clone of Couchsurfing.com. Leade developer. Built using JavaScript, React/Redux, Ruby on Rails and PostgreSQL</p>
 									</section>
 								</div>
@@ -99,10 +100,10 @@
 									<section class="middle">
 										<a href="http://light--up.herokuapp.com/">
 											<img src="images/idea.png" alt="lightup" width="200px" height="200px">
+											<header>
+												<h2>Light Up</h2>
+											</header>
 										</a>
-										<header>
-											<h2>Light Up</h2>
-										</header>
 										<p>A mentorship community for students to connect over shared interests and goals. Front-end developer. Worked with Javascript, React/Redux, HTML5 and CSS. </p>
 									</section>
 								</div>
@@ -110,10 +111,10 @@
 									<section class="last">
 										<a href="https://alaizard.github.io/Hello-New-York/" target="_blank">
 											<img src="images/hny.png" alt="hny" width="270px">
+											<header>
+												<h2>Hello New York</h2>
+											</header>
 										</a>
-										<header>
-											<h2>Hello New York</h2>
-										</header>
 										<p>A data visualization of the most used words of the top 5 languages in each borough of NYC. Lead developer. Built with JavaScript and D3</p>
 									</section>
 								</div>
@@ -280,39 +281,34 @@
 								<!-- Blog -->
 									<section>
 										<header class="major">
-											<h2>About Me</h2>
 										</header>
 										<div class="row">
 											<div class="col-6 col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 													<header>
-														<h3>Magna tempus consequat</h3>
-														<p>Posted 45 minutes ago</p>
+														<h3>About Me</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
-													<footer>
-														<ul class="actions">
-															<li><a href="#" class="button icon solid fa-file-alt">Continue Reading</a></li>
-															<li><a href="#" class="button alt icon solid fa-comment">33 comments</a></li>
-														</ul>
-													</footer>
+													<p class="about">I'm a software engineer with a passion for frontend development. I'm currently working on a full-stack project using a
+													Ruby on Rails backend and a React Redux frontend. I have additional experience with MongoDB, Express, PostgreSQL,
+													NodeJS, Git, Heroku, and other technologies.
+													
+													I was previously an educator, teaching English as a foreign language at Hanoi University of Public Health, as well as
+													teaching Environmental Science to all grades throughout New Jersey.
+													
+													In my free time I enjoy hiking, discovering new music, exercising, traveling the world, and meeting new people.</p>
 												</section>
 											</div>
 											<div class="col-6 col-12-small">
-												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+												<section class="box" id="funfacts">
+
 													<header>
-														<h3>Aptent veroeros aliquam</h3>
-														<p>Posted 45 minutes ago</p>
+														<h3>Fun Facts</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
-													<footer>
-														<ul class="actions">
-															<li><a href="#" class="button icon solid fa-file-alt">Continue Reading</a></li>
-															<li><a href="#" class="button alt icon solid fa-comment">33 comments</a></li>
-														</ul>
-													</footer>
+													<p class="about">In my past, I lived in Hanoi, Vietnam for 2 years and I hope to experience more life-changing events similar to diving
+														head first into a foreign country. I can get completely lost in stories that have amazingly architectured worlds and complex histories. One of my 
+														favorite things about stories is the open-ended nature of their content. Many different values can be absorbed through one event. In a way, 
+														coding is similar because there are multiple paths that lead to the same destination.
+													</p>
 												</section>
 											</div>
 										</div>
@@ -326,117 +322,24 @@
 			<!-- Footer -->
 				<section id="footer">
 					<div class="container">
-						<div class="row">
-							<div class="col-8 col-12-medium">
+							<div class="col-4 col-12-medium" id="contact">
 								<section>
 									<header>
-										<h2>Blandit nisl adipiscing</h2>
-									</header>
-									<ul class="dates">
-										<li>
-											<span class="date">Jan <strong>27</strong></span>
-											<h3><a href="#">Lorem dolor sit amet veroeros</a></h3>
-											<p>Ipsum dolor sit amet veroeros consequat blandit ipsum phasellus lorem consequat etiam.</p>
-										</li>
-										<li>
-											<span class="date">Jan <strong>23</strong></span>
-											<h3><a href="#">Ipsum sed blandit nisl consequat</a></h3>
-											<p>Blandit phasellus lorem ipsum dolor tempor sapien tortor hendrerit adipiscing feugiat lorem.</p>
-										</li>
-										<li>
-											<span class="date">Jan <strong>15</strong></span>
-											<h3><a href="#">Magna tempus lorem feugiat</a></h3>
-											<p>Dolore consequat sed phasellus lorem sed etiam nullam dolor etiam sed amet sit consequat.</p>
-										</li>
-										<li>
-											<span class="date">Jan <strong>12</strong></span>
-											<h3><a href="#">Dolore tempus ipsum feugiat nulla</a></h3>
-											<p>Feugiat lorem dolor sed nullam tempus lorem ipsum dolor sit amet nullam consequat.</p>
-										</li>
-										<li>
-											<span class="date">Jan <strong>10</strong></span>
-											<h3><a href="#">Blandit tempus aliquam?</a></h3>
-											<p>Feugiat sed tempus blandit tempus adipiscing nisl lorem ipsum dolor sit amet dolore.</p>
-										</li>
-									</ul>
-								</section>
-							</div>
-							<div class="col-4 col-12-medium">
-								<section>
-									<header>
-										<h2>What's this all about?</h2>
-									</header>
-									<a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
-									<p>
-										This is <strong>Dopetrope</strong> a free, fully responsive HTML5 site template by
-										<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a> It's released for free under
-										the <a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for any personal or commercial project &ndash; just don't forget to credit us!
-									</p>
-									<footer>
-										<ul class="actions">
-											<li><a href="#" class="button">Find out more</a></li>
-										</ul>
-									</footer>
-								</section>
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-								<section>
-									<header>
-										<h2>Tempus consequat</h2>
-									</header>
-									<ul class="divided">
-										<li><a href="#">Lorem ipsum dolor sit amet sit veroeros</a></li>
-										<li><a href="#">Sed et blandit consequat sed tlorem blandit</a></li>
-										<li><a href="#">Adipiscing feugiat phasellus sed tempus</a></li>
-										<li><a href="#">Hendrerit tortor vitae mattis tempor sapien</a></li>
-										<li><a href="#">Sem feugiat sapien id suscipit magna felis nec</a></li>
-										<li><a href="#">Elit class aptent taciti sociosqu ad litora</a></li>
-									</ul>
-								</section>
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-								<section>
-									<header>
-										<h2>Ipsum et phasellus</h2>
-									</header>
-									<ul class="divided">
-										<li><a href="#">Lorem ipsum dolor sit amet sit veroeros</a></li>
-										<li><a href="#">Sed et blandit consequat sed tlorem blandit</a></li>
-										<li><a href="#">Adipiscing feugiat phasellus sed tempus</a></li>
-										<li><a href="#">Hendrerit tortor vitae mattis tempor sapien</a></li>
-										<li><a href="#">Sem feugiat sapien id suscipit magna felis nec</a></li>
-										<li><a href="#">Elit class aptent taciti sociosqu ad litora</a></li>
-									</ul>
-								</section>
-							</div>
-							<div class="col-4 col-12-medium">
-								<section>
-									<header>
-										<h2>Vitae tempor lorem</h2>
+										<h2>Get In Touch!</h2>
 									</header>
 									<ul class="social">
-										<li><a class="icon brands fa-facebook-f" href="#"><span class="label">Facebook</span></a></li>
-										<li><a class="icon brands fa-twitter" href="#"><span class="label">Twitter</span></a></li>
-										<li><a class="icon brands fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
-										<li><a class="icon brands fa-tumblr" href="#"><span class="label">Tumblr</span></a></li>
-										<li><a class="icon brands fa-linkedin-in" href="#"><span class="label">LinkedIn</span></a></li>
+										<li><a class="icon brands fa-linkedin-in" href="https://www.linkedin.com/in/jason-kopacz-2917264a/"><span class="label">LinkedIn</span></a></li>
+										<li><a class="icon brands fa-github" href="https://github.com/Alaizard"><span class="label">Github</span></a></li>
+										<li><a class="icon brands fa-angellist" href="https://angel.co/jason-kopacz"><span class="label">AngelList</span></a></li>
 									</ul>
 									<ul class="contact">
 										<li>
-											<h3>Address</h3>
-											<p>
-												Untitled Incorporated<br />
-												1234 Somewhere Road Suite<br />
-												Nashville, TN 00000-0000
-											</p>
-										</li>
-										<li>
-											<h3>Mail</h3>
-											<p><a href="#">someone@untitled.tld</a></p>
+											<h3>Email</h3>
+											<p>jtkopacz@gmail.com</p>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<p>(800) 000-0000</p>
+											<p>(201) 424-8224</p>
 										</li>
 									</ul>
 								</section>
