added blank to light up link

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								</div>
 								<div class="col-4 col-12-medium">
 									<section class="middle">
-										<a href="http://light--up.herokuapp.com/">
+										<a href="http://light--up.herokuapp.com/" target="_blank">
 											<img src="images/idea.png" alt="lightup" width="200px" height="200px">
 											<header>
 												<h2>Light Up</h2>
