--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="shortcut icon" href="jk_logo_outline.png" />
 		<link rel="stylesheet"
 			href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 			<link rel="stylesheet"
@@ -59,6 +60,7 @@
 
 					<!-- Logo -->
 						<h1><a href="index.html">Jason Kopacz</a></h1>
+						<h2>Software Engineer</h2>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -69,8 +71,12 @@
 								</li>
 								<li><a href="https://github.com/Alaizard" target="_blank">Github</a></li>
 								<li><a href="https://angel.co/jason-kopacz" target="_blank">AngelList</a></li>
+								<li><a target="_blank" href="https://docs.google.com/document/d/1bM8FkSE2oSd_Jy5sQ_IpJeWng1I0Z-2qJ6-F8ATaIm4/edit?usp=sharing">Resume<span class="label"></span></a></li>
+
 							</ul>
 						</nav>
+
+						<script src="left-sidebar.html"></script>
 
 					<!-- Banner -->
 					<div class="picture"></div>
@@ -93,7 +99,9 @@
 												<h2>Couch9</h2>
 											</header>
 										</a>
-										<p>A near pixel-perfect clone of Couchsurfing.com. Leade developer. Built using JavaScript, React/Redux, Ruby on Rails and PostgreSQL</p>
+										<p>A near pixel-perfect clone of Couchsurfing.com. Leade developer. Built using JavaScript, React/Redux, Ruby on Rails and PostgreSQL</p> <br> <br>
+										<a href="https://github.com/Alaizard/Couch9" target="_blank" style="font-weight:bold">Github Repo</a>
+
 									</section>
 								</div>
 								<div class="col-4 col-12-medium">
@@ -104,7 +112,9 @@
 												<h2>Light Up</h2>
 											</header>
 										</a>
-										<p>A mentorship community for students to connect over shared interests and goals. Front-end developer. Worked with Javascript, React/Redux, HTML5 and CSS. </p>
+										<p>A mentorship community for students to connect over shared interests and goals. Front-end developer. Worked with Javascript, React/Redux, HTML5 and CSS. </p> <br>
+										<a href="https://github.com/jeanyang0519/Light-Up" target="_blank" style="font-weight:bold">Github Repo</a>
+
 									</section>
 								</div>
 								<div class="col-4 col-12-medium">
@@ -116,6 +126,9 @@
 											</header>
 										</a>
 										<p>A data visualization of the most used words of the top 5 languages in each borough of NYC. Lead developer. Built with JavaScript and D3</p>
+										<br>
+										<br>
+										<a href="https://github.com/Alaizard/Hello-New-York" target="_blank" style="font-weight:bold">Github Repo</a>
 									</section>
 								</div>
 							</div>
@@ -328,9 +341,10 @@
 										<h2>Get In Touch!</h2>
 									</header>
 									<ul class="social">
-										<li><a class="icon brands fa-linkedin-in" href="https://www.linkedin.com/in/jason-kopacz-2917264a/"><span class="label">LinkedIn</span></a></li>
-										<li><a class="icon brands fa-github" href="https://github.com/Alaizard"><span class="label">Github</span></a></li>
-										<li><a class="icon brands fa-angellist" href="https://angel.co/jason-kopacz"><span class="label">AngelList</span></a></li>
+										<li><a class="icon brands fa-linkedin-in" target="_blank" href="https://www.linkedin.com/in/jason-kopacz-2917264a/"><span class="label">LinkedIn</span></a></li>
+										<li><a class="icon brands fa-github"target="_blank" href="https://github.com/Alaizard"><span class="label">Github</span></a></li>
+										<li><a class="icon brands fa-angellist"target="_blank" href="https://angel.co/jason-kopacz"><span class="label">AngelList</span></a></li>
+										<li><a class="far fa-file"target="_blank" href="https://docs.google.com/document/d/1bM8FkSE2oSd_Jy5sQ_IpJeWng1I0Z-2qJ6-F8ATaIm4/edit?usp=sharing"><span class="label"></span></a></li>
 									</ul>
 									<ul class="contact">
 										<li>
@@ -340,6 +354,11 @@
 										<li>
 											<h3>Phone</h3>
 											<p>(201) 424-8224</p>
+										</li>
+										<li>
+											<h3>Address</h3>
+											<p>75 west 49th str</p>
+											<p>Bayonne, New Jersey 07002</p>
 										</li>
 									</ul>
 								</section>
