added livelinks and fixed picture

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 				<section id="header">
 
 					<!-- Logo -->
+						<div class="picture"></div>
 						<h1><a href="index.html">Jason Kopacz</a></h1>
 						<h2>Software Engineer</h2>
 
@@ -81,7 +82,7 @@
 						<script src="left-sidebar.html"></script>
 
 					<!-- Banner -->
-					<div class="picture"></div>
+					
 					<section id="banner">
 						<header>
 							<h2>Hey, I'm</h2>
@@ -102,6 +103,7 @@
 											</header>
 										</a>
 										<p>A near pixel-perfect clone of Couchsurfing.com. Leade developer. Built using JavaScript, React/Redux, Ruby on Rails and PostgreSQL</p> <br> <br>
+										<a href="http://couch9.herokuapp.com/" target="_blank" style="font-weight: bold;">Check It Out</a><br>
 										<a href="https://github.com/Alaizard/Couch9" target="_blank" style="font-weight:bold">Github Repo</a>
 
 									</section>
@@ -115,6 +117,7 @@
 											</header>
 										</a>
 										<p>A mentorship community for students to connect over shared interests and goals. Front-end developer. Worked with Javascript, React/Redux, HTML5 and CSS. </p> <br>
+										<a href="http://light--up.herokuapp.com/" target="_blank" style="font-weight: bold;">Check It Out</a><br>
 										<a href="https://github.com/jeanyang0519/Light-Up" target="_blank" style="font-weight:bold">Github Repo</a>
 
 									</section>
@@ -130,6 +133,7 @@
 										<p>A data visualization of the most used words of the top 5 languages in each borough of NYC. Lead developer. Built with JavaScript and D3</p>
 										<br>
 										<br>
+										<a href="https://alaizard.github.io/Hello-New-York/" target="_blank" style="font-weight: bold;">Check It Out</a><br>
 										<a href="https://github.com/Alaizard/Hello-New-York" target="_blank" style="font-weight:bold">Github Repo</a>
 									</section>
 								</div>
