--- a/index.html
+++ b/index.html
@@ -369,8 +369,7 @@
 										</li>
 										<li>
 											<h3>Address</h3>
-											<p>75 west 49th str</p>
-											<p>Bayonne, New Jersey 07002</p>
+											<p>New York, New York</p>
 										</li>
 									</ul>
 								</section>
