--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<section class="first">
-										<a href="http://couch9.herokuapp.com/" target="_blank">
+										<a href="https://couch9.herokuapp.com/" target="_blank">
 											<img src="images/logo.png" alt="">
 											<header>
 												<h2>Couch9</h2>
